add gpu to create runtime
